@@ -217,6 +217,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - Uno IDL                Cedric Bosdonnat
 - UnrealScript           pospi
 - UPC                    Viraj Sinha
+- Urbi                   Alexandre Morgand
 - Vala                   Nicolas Joseph
 - VB                     Roberto Rossi
 - VB.NET                 Alan Juden
