@@ -23,6 +23,7 @@ Version 1.0.8.11
      * SPARK (Phil Thornley)
      * StoneScript (Archimmersion)
      * UPC (Viraj Sinha)
+     * Urbi (Alexandre Morgand)
      * Vedit (Pauli Lindgren)
   - Updated aliasd.php contrib script (SF#3073275, count)
   -  Improvements to language files (BenBE)
